<resources>
    <string name="app_name">UVLightChecker</string>

    <string name="uv_view_intro">Look! A UV Index!(sample…)</string>
    <string name="uv_value"> 10 </string>
    <string name="uv_text_view">The UV Index is: </string>
    <string name="date_uv">On this date: </string>
    <string name="welcome_message">Welcome to this UV app thingy!</string>
    <string name="signin_register">Sign in or Register!</string>

    //EDIT TEXT HINTS
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_pass_word">Enter Password</string>
    <string name="confirm_pass_word">Must Match Above</string>
    <string name="enter_email">Enter Email Address</string>

    //PROFILE INFORMATION STRINGS
    <string name="sign_in_dialog">Sign In</string>
    <string name="profile_info">Profile Info</string>
    <string name="user_name">Username:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email Address:</string>
    <string name="pass_word">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="submit_btn">Submit</string>
    <string name="register_dialog">Register</string>

</resources>
