<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/red"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_dialog"
        android:id="@+id/sign_in_here"
        android:textAlignment="center"
        android:textSize="30sp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_here"
        android:layout_alignParentLeft="true"
        android:id="@+id/user_name_spot"
        android:text="@string/user_name"
        android:textSize="30sp"

        android:gravity="center_horizontal"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/user_name_spot"
        android:layout_below="@id/sign_in_here"
        android:id="@+id/edit_user_name"
        android:hint="@string/enter_user_name"

        android:layout_toEndOf="@id/user_name_spot" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pass_word_spot"
        android:layout_below="@id/user_name_spot"
        android:layout_alignParentLeft="true"
        android:text="@string/pass_word"
        android:textSize="30sp"

        android:gravity="center_horizontal"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_pass_word"
        android:layout_below="@id/user_name_spot"
        android:layout_toRightOf="@id/pass_word_spot"
        android:hint="@string/enter_pass_word"
        android:layout_toEndOf="@id/pass_word_spot" />

</RelativeLayout>