<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkOrange"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="50sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:id="@+id/welcome"
        android:background="@color/yellow"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/signin_register"
        android:layout_below="@+id/welcome"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:background="@color/cardview_dark_background"
        android:id="@+id/register"
        tools:ignore="PrivateResource" />

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/sign_in_dialog"
        android:textSize="30sp"
        android:layout_below="@+id/register"
        android:layout_centerInParent="true"
        android:id="@+id/signin_dialog"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_button"
        />


    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/register_dialog"
        android:textSize="30sp"
        android:layout_below="@+id/signin_dialog"
        android:layout_centerInParent="true"
        android:id="@+id/register_dialog"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_button"
        />


</RelativeLayout>