<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:id="@+id/sun_image"
        android:layout_height="100dp"
        android:src="@drawable/sun_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uv_text_view"
        android:id="@+id/uv_text_view"
        android:layout_toRightOf="@+id/sun_image"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/sun_image"
        android:paddingEnd="5dp"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:text="@string/uv_value"
        android:layout_alignParentRight="true"
        android:paddingEnd="30dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uv_text_view"
        android:layout_toRightOf="@id/sun_image"
        android:id="@+id/uv_date"
        android:textSize="20sp"
        android:text="@string/date_uv"
        android:paddingRight="5dp"
        android:layout_toEndOf="@id/sun_image"
        android:paddingEnd="5dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uv_text_view"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"
        android:paddingEnd="30dp"
        android:text="Date"
        android:layout_alignParentRight="true"
        android:paddingRight="30dp"
        tools:ignore="RtlSymmetry" />

</RelativeLayout>